feat: JDK 17升级 + 代码优化 + 文档更新